--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
     <wb-module deploy-name="LoginSpring">
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="/SpringMVCDemo"/>
         <property name="java-output-path" value="/LoginSpring/WebRoot/WEB-INF/classes"/>
+        <property name="context-root" value="/LoginSpring"/>
     </wb-module>
 </project-modules>
